<resources>
    <string name="app_name">SectorTaskManager</string>
    <string name="end_tutorial">End Tutorial</string>
    <string name="text_all_day">All Day</string>
    <string name="text_event_start">Start</string>
    <string name="text_event_end">End</string>
    <string name="text_reminder_before">Reminder Before</string>
    <string name="text_event_description">Description</string>
    <string name="text_event_title">Title</string>
    <string name="event_end_time">8:00 pm</string>
    <string name="reminder_before_time">10 minutes</string>
    <string name="text_event_repeat">Repeat</string>
    <string name="repeat_time">Every month</string>
    <string name="text_event_sound_mode">Sound mode</string>
    <string name="melody_name">Default</string>
    <string name="event_start_time">September 7 8:00 am</string>
    <string name="text_mute">Mute</string>
    <string name="text_music_and_vibration">Music and vibration</string>
    <string name="text_vibration">Vibration</string>
    <string name="text_only_music">Only Music</string>
    <string name="text_music">Music</string>
    <string name="text_music_name">Music Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_start_date">21th September</string>
    <string name="text_start_time">8:00 am</string>
    <string name="text_end_date">22th September</string>
    <string name="text_end_time">9:00 am</string>
    <string name="text_not_remind">Not Remind</string>
    <string name="text_at_the_start">At the Start</string>
    <string name="text_5_minutes_before">5 minutes before</string>
    <string name="text_15_minutes_before">15 minutes before</string>
    <string name="text_30_minutes_before">30 minutes before</string>
    <string name="text_1_hour_before">1 hour before</string>
    <string name="text_4_hours_before">4 hours Before</string>
    <string name="text_1_day_before">1 day before</string>
    <string name="text_2_days_before">2 days before</string>
    <string name="text_once">Once</string>
    <string name="text_everyday">Everyday</string>
    <string name="text_weekly">Weekly</string>
    <string name="text_after_3_weeks">Every 3 weeks</string>
    <string name="text_monthly">Monthly</string>
    <string name="text_annually">Annually</string>
    <string name="text_preset_music">Preset Music</string>
    <string name="text_my_music">My Music</string>
    <string name="text_song_name">Song Name</string>
    <string name="text_singer">Singer</string>
</resources>