<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layouts_paddings"
    tools:context=".Activities.RepeatModeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/mediumTextView"
            android:text="@string/text_once"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/onceCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/mediumTextView"
            android:text="@string/text_everyday"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/everydayCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:button="@drawable/custom_checkbox" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/mediumTextView"
            android:text="@string/text_weekly"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/weeklyCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/mediumTextView"
            android:text="@string/text_after_3_weeks"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/every3weeksCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/mediumTextView"
            android:text="@string/text_monthly"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/hoursBefore1CheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/mediumTextView"
            android:text="@string/text_annually"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/annuallyCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

</LinearLayout>