<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

<LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layouts_paddings"
    tools:context=".Activities.ChooseReminderBeforeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_not_remind"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/custom_thumb"
                android:track="@drawable/custom_track"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/images_add_event">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_at_the_start" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/atTheStartCheckBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_checkbox" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/images_add_event">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_5_minutes_before" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/fiveMinutesBeforeCheckBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_checkbox" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/images_add_event">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_15_minutes_before" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/minutesBefore15CheckBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_checkbox" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/images_add_event">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_30_minutes_before" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/minutesBefore30CheckBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_checkbox" />
        </RelativeLayout>

        //

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/images_add_event">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_1_hour_before" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/hoursBefore1CheckBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_checkbox" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/images_add_event">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_4_hours_before" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/hoursBefore4CheckBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_checkbox" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/images_add_event">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_1_day_before" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/daysBefore1CheckBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_checkbox" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/images_add_event">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_2_days_before" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/daysBefore2CheckBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_checkbox" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/images_add_event">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="1 week before" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/weeksBefore1CheckBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_checkbox" />
        </RelativeLayout>


    </LinearLayout>

</layout>