<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layouts_paddings"
    tools:context=".Activities.ChooseSoundModeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            style="@style/mediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_mute" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/muteCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            style="@style/mediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_vibration" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/vibrationCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            style="@style/mediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_music_and_vibration" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/musicAndVibrationCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/images_add_event">

        <TextView
            style="@style/mediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_only_music" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/musicCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/soundText"
            style="@style/mediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/between_Image_and_text"
            android:gravity="center"
            android:text="@string/text_event_sound_mode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/soundImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ringtoneLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/melodyTextView"
                style="@style/baseTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/melody_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/soundArrow"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/soundArrow"
                android:layout_width="@dimen/images_add_event"
                android:layout_height="@dimen/images_add_event"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>